--- a/package.xml
+++ b/package.xml
@@ -17,6 +17,8 @@
 
   <license>BSD</license>
 
+
+
   <buildtool_depend>catkin</buildtool_depend>
 
   <build_depend>cv_bridge</build_depend>
@@ -25,6 +27,8 @@
   <build_depend>roscpp</build_depend>
   <build_depend>rospy</build_depend>
   <build_depend>sensor_msgs</build_depend>
+  <build_depend>std_msgs</build_depend>
+
   <build_depend>message_generation</build_depend>
 
   <run_depend>cv_bridge</run_depend>
@@ -33,6 +37,7 @@
   <run_depend>roscpp</run_depend>
   <run_depend>rospy</run_depend>
   <run_depend>sensor_msgs</run_depend>
+  <run_depend>std_msgs</run_depend>
   <run_depend>message_runtime</run_depend>
 
 </package>
